# cglchash

./: CMakeLists.txt  sample3.txt
src/: main.cpp  main.hpp  my.cpp  my.hpp
test/: mtest1.cpp  mtest2.cpp
